--- a/sankofa-custom.css
+++ b/sankofa-custom.css
@@ -56,14 +56,15 @@ html:not(.touch-styles) body:not(.force-mobile-nav) .nav-wrapper .folder .subnav
 body:not(.collection-type-gallery) .desc-wrapper p {
   text-align: right;
   padding-right: 15%;
-  margin: -65px 0 65px 0;
+  /* margin: -65px 0 65px 0; */
 }
 
-@media only screen and (max-width:640px) {
+/*@media only screen and (max-width:640px) {
   body:not(.collection-type-gallery) .desc-wrapper p {
     margin: -65px 0 65px 0;;
   }
-}
+}*/
+
 
 /* Footer */
 #preFooter {
