hide meta data from blog posts

--- a/sankofa-custom.css
+++ b/sankofa-custom.css
@@ -214,6 +214,10 @@ h2.music {
   font-family: Abel;
 }
 
+.meta-below-title {
+  display: none;
+}
+
 /* Read more link */
 .sqs-block-summary-v2 .summary-read-more-link {
   font-family: "Abel";
