--- a/sankofa-custom.css
+++ b/sankofa-custom.css
@@ -67,6 +67,10 @@ body:not(.collection-type-gallery) .desc-wrapper p {
 
 
 /* Footer */
+#footer {
+  display: none;
+}
+
 #preFooter {
   text-align: center;
   font-family: sans-serif;
