Adding Dispatch custom CSS related to "Archives" module. Correction of some typos

--- a/sankofa-custom.css
+++ b/sankofa-custom.css
@@ -162,14 +162,14 @@ html:not(.touch-styles) body:not(.force-mobile-nav) .nav-wrapper .folder .subnav
 }
 
 
-#what-we-do .sqs-col-6:first-child,{
+#what-we-do .sqs-col-6:first-child {
   background: black;
   color: white;
 }
 
 #what-we-do .sqs-col-6 {
   padding-top: 2em;
-  Padding-bottom: 2px;
+  padding-bottom: 2px;
 }
 
 #what-we-do .sqs-col-6:first-child h2,
@@ -354,7 +354,7 @@ h2.music {
 
 .pagination {
   font-family: Abel;
-  Display: none;
+  display: none;
 }
 
 .meta-below-title {
@@ -378,4 +378,40 @@ h2.music {
 .donation-block .sqs-donate-button {
   font-size: 1.8em;
   font-weight: 900;
+}
+
+/* --------- Dispatches --------- */
+.sqs-block-archive .archive-block-setting-layout-index .archive-item {
+  display: inline-block;
+  box-sizing: border-box;
+  width: calc(50%);
+  height: 6em;
+  margin: 0;
+  padding: 5px 5px 1em 0;
+  font-family: "Abel";
+  font-size: 30px;
+  line-height: 1em;
+  text-align: left;
+  text-transform: uppercase;
+  color: inherit;
+}
+
+.sqs-block-archive .archive-block-setting-layout-index .archive-item:hover {
+  color: #ee3f00;
+}
+
+.sqs-block-archive .archive-block-setting-layout-index .archive-item {
+  display: none;
+}
+
+.sqs-block-archive .archive-block-setting-layout-index .archive-item:nth-child(n+29) {
+  display: inline-block;
+}
+
+.sqs-block-archive .archive-group-name-link{
+  display: none;
+}
+
+.sqs-block-archive {
+  margin-top: -34px;
 }
