--- a/sankofa-custom.css
+++ b/sankofa-custom.css
@@ -117,12 +117,12 @@ html:not(.touch-styles) body:not(.force-mobile-nav) .nav-wrapper .folder .subnav
 }
 
 .banner-thumbnail-wrapper .desc-wrapper p {
-  font-size: 56px !important;
+  font-size: 2.2rem !important;
 }
 
 @media only screen and (max-width: 640px) {
   .banner-thumbnail-wrapper .desc-wrapper p {
-    font-size: 40px !important;
+    font-size: 2rem !important;
   }
 }
 
